--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,7 +81,7 @@
       <div class="page-header-image" style="background-image: url('../assets/images/pic2.jpg');"></div>
       <div class="container">
         <div class="content-center ">
-          <div class="cc-profile-image"><a href="#"><img src="../assets/images/TEBOGO.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a><img src="../assets/images/TEBOGO.jpg" alt="Image"/></a></div>
           <div class="h2 title">Tebogo Malekgele Ledwaba</div>
           <p class="category text-white">MEAN Stack Developer</p>
         </div>
@@ -263,7 +263,10 @@
           <div class="card-body">
             <div class="h5">Diploma in Information Technology(Software Development)</div>
             <p class="category">Richfield Graduate Institute of Technology</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p><strong>Student Number:</strong> 129379 <br>
+              <strong>Status:</strong> 6th Semester <br>
+             <strong>Major Modules:</strong>
+              Operating Systems 600, Management Information System 600, Programming 632(Java)</p>
           </div>
         </div>
       </div>
@@ -273,14 +276,14 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
             <p>2016 - 2017</p>
-            <div class="h5">High School</div>
+            <div class="h5">Matric</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Hoerskool Noorderland</div>
             <p class="category">School of Secondary education</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>I have obtained a National Seniour Certificate which is a high school Diploma. I studied at least seven subjects, including compulsory official South African languages, English First Additional Language, Sepedi Home Language, Mathematics, Life Orientation and three Science elective subjects which are Life Sciences, Physical Sciences and Geography</p>
           </div>
         </div>
       </div>
@@ -297,7 +300,7 @@
         </div>
         <div class="col-lg-10 col-md-9">
           <p class="category">Operations manager</p>
-          <p>Melisha is responsible for managing teams of interns, which involves both the engagement and development of these interns.</p>
+          <p>Melisha is responsible for managing teams of interns, which involves both the engagement and development of these interns. <br><br> <strong>Contact: 079 143 2688</strong></p>
         </div>
       </div>
 </div>
@@ -308,18 +311,18 @@
     </div>
     <div class="col-lg-10 col-md-9">
       <p class="category">Team Leader</p>
-      <p> Jason is responsible for decision-making, coaching, mentoring and developing the team’s skills and managing conflict.</p>
+      <p> Jason is responsible for decision-making, coaching, mentoring and developing the team’s skills and managing conflict.<br><br><strong>Contact: 063 552 7115</strong></p>
     </div>
   </div>
 </div>
 <div class="card">
   <div class="row">
-    <div class="col-lg-2 col-md-3 cc-reference-header"><img src="../assets/images/Mr Daniel.jpeg" alt="Image"/>
-      <div class="h5 pt-2">Daniel</div>
+    <div class="col-lg-2 col-md-3 cc-reference-header"><img src="../assets/images/Rathete1.jpeg" alt="Image"/>
+      <div class="h5 pt-2">Rathete</div>
     </div>
     <div class="col-lg-10 col-md-9">
-      <p class="category">Campus Manager</p>
-      <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
+      <p class="category">Lecture</p>
+      <p> Rathete is a Programming lecture and he is responsible for teaching the undergraduates and graduates in the area allocated by the Head of Department. He supervises or assist with the supervision of undergraduate or graduate students and carry out the research and produce publications, or other research outputs.<br><br><strong>Contact: 079 927 0707</strong> </p>
     </div>
   </div>
 </div>
@@ -330,7 +333,7 @@
     </div>
     <div class="col-lg-10 col-md-9">
       <p class="category">Principal</p>
-      <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
+      <p> Ratema is resposible for providing leadership, direction and co-ordination within the school. His main focus is to develop and maintain effective educational programs within his school and to promote the improvement of teaching and learning with his school. <br><br><strong>Contact: 015 297 3200</strong> </p>
     </div>
   </div>
 </div>
