--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4009,7 +4009,9 @@ tbody.collapse.show {
 .card-body {
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
-    padding: 1.25rem
+    padding: 1.25rem;
+    font-family: "Times New Roman", Times, serif;
+      
 }
 
 .card-title {
@@ -15734,15 +15736,15 @@ a.text-dark:hover {
     transition: all .3s ease-out;
   }
   
-  .cc-profile-image a:hover img {
-    -webkit-transform: scale(1.06, 1.06);
-            transform: scale(1.06, 1.06);
-  }
+//   .cc-profile-image a:hover img {
+//     -webkit-transform: scale(1.06, 1.06);
+//             transform: scale(1.06, 1.06);
+//   }
   
-  .cc-profile-image a:hover:before {
-    -webkit-animation: none;
-            animation: none;
-  }
+//   .cc-profile-image a:hover:before {
+//     -webkit-animation: none;
+//             animation: none;
+//   }
   
   /* Profile Page Social button Style */
   .button-container .btn-default {
